--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,6 @@ body
 	font-family: 'Raleway', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-}
-body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -238,11 +236,13 @@ h1,h2,h3,h4,h5
 /* start work */
 /* start work */
 #About {
-  background: #1a1a1a;
+  background: #000000;
   padding: 50px 0; /* Added padding for spacing */
-  height: 100vh; /* Set height to viewport height */
-  overflow-y: auto; /* Add vertical scrolling if content exceeds viewport height */
+  min-height: 50vh; /* Minimum height to ensure it covers at least half of the viewport height */
+  box-sizing: border-box; /* Include padding in the element's total height and width */
 }
+
+
 
 #About h2 {
   text-align: center;
@@ -379,18 +379,6 @@ h1,h2,h3,h4,h5
   color: #D43F52;
 }
 
-/* Radial bars */
-.radial-bars {
-  display: inline-block;
-  margin: 20px;
-  text-align: center;
-}
-
-.radial-bars svg {
-  width: 150px;
-  height: 150px;
-  transform: rotate(-90deg);
-}
 
 .progress-bar {
   fill: none;
@@ -418,26 +406,6 @@ h1,h2,h3,h4,h5
   font-size: 1em;
 }
 
-/* Specific radial progress */
-.radial-bars:nth-of-type(1) .path {
-  --stroke-dashoffset: calc(502 - (502 * 90 / 100));
-}
-
-.radial-bars:nth-of-type(2) .path {
-  --stroke-dashoffset: calc(502 - (502 * 80 / 100));
-}
-
-.radial-bars:nth-of-type(3) .path {
-  --stroke-dashoffset: calc(502 - (502 * 85 / 100));
-}
-
-.radial-bars:nth-of-type(4) .path {
-  --stroke-dashoffset: calc(502 - (502 * 70 / 100));
-}
-
-.radial-bars:nth-of-type(5) .path {
-  --stroke-dashoffset: calc(502 - (502 * 90 / 100));
-}
 
 @keyframes slideRight{
   0% {
@@ -530,7 +498,7 @@ h1,h2,h3,h4,h5
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgb(0, 0, 0);
     color: #fff;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -568,7 +536,7 @@ h1,h2,h3,h4,h5
 
 #portfolio
     {
-        background: #1a1a1a;
+        background: #000000;
         text-align: center;
     }
 #portfolio h2
