--- a/css/style.css
+++ b/css/style.css
@@ -238,8 +238,8 @@ h1,h2,h3,h4,h5
 #About {
   background: #000000;
   padding: 50px 0; /* Added padding for spacing */
-  min-height: 50vh; /* Minimum height to ensure it covers at least half of the viewport height */
-  box-sizing: border-box; /* Include padding in the element's total height and width */
+  height: 100vh; /* Set height to viewport height */
+  overflow-y: auto; /* Include padding in the element's total height and width */
 }
 
 
